--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -6,7 +6,7 @@
       "api_gateway_stage": "api",
       "environment_variables": {
         "APP_TABLE_NAME": "Movies",
-        "SNS_TOPIC": "defaultSNS"
+        "SNS_TOPIC": "StoreDeviceData"
       }
     }
   }
