--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -5,7 +5,7 @@
     "dev": {
       "api_gateway_stage": "api",
       "environment_variables": {
-        "APP_TABLE_NAME": "Movies",
+        "APP_TABLE_NAME": "DeviceData",
         "SNS_TOPIC": "StoreDeviceData"
       }
     }
